Opdateret styling af overskrifter og sektioner

--- a/gallery.html
+++ b/gallery.html
@@ -12,23 +12,23 @@
 
     <div class="gallery">
         <div class="bird">
-            <img src="images/download.jpg" alt="Bird 1">
+            <img src="images/bird1.jpg" alt="Bird 1">
             <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
         </div>
         <div class="bird">
-            <img src="images/download(1).jpg" alt="Bird 2">
+            <img src="images/bird2.jpg" alt="Bird 2">
             <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
         </div>
         <div class="bird">
-            <img src="images/download(2).jpg" alt="Bird 3">
+            <img src="images/bird3.jpg" alt="Bird 3">
             <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
         </div>
         <div class="bird">
-            <img src="images/download(3).jpg" alt="Bird 4">
+            <img src="images/bird4.jpg" alt="Bird 4">
             <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
         </div>
         <div class="bird">
-            <img src="images/download(4).jpg" alt="Bird 5">
+            <img src="images/bird5.jpg" alt="Bird 5">
             <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
         </div>
     </div>
