Fancy layout til galleri

--- a/gallery.html
+++ b/gallery.html
@@ -7,34 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🦜 Mine Nymph Parakitter</h1>
-    <p>Her er mine cutties fugle!</p>
 
-    <div class="gallery">
-        <div class="bird">
-            <img src="images/bird1.jpg" alt="Bird 1">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
+    <div class="container">
+        <h1>🦜 Mine Nymph Parakitter</h1>
+        <p>Her er mine cutties fugle!</p>
+
+        <div class="gallery">
+            <div class="bird">
+                <img src="images/bird1.jpg" alt="Bird 1">
+                <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
+            </div>
+            <div class="bird">
+                <img src="images/bird2.jpg" alt="Bird 2">
+                <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
+            </div>
+            <div class="bird">
+                <img src="images/bird3.jpg" alt="Bird 3">
+                <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
+            </div>
+            <div class="bird">
+                <img src="images/bird4.jpg" alt="Bird 4">
+                <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
+            </div>
+            <div class="bird">
+                <img src="images/bird5.jpg" alt="Bird 5">
+                <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
+            </div>
         </div>
-        <div class="bird">
-            <img src="images/bird2.jpg" alt="Bird 2">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
-        <div class="bird">
-            <img src="images/bird3.jpg" alt="Bird 3">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
-        <div class="bird">
-            <img src="images/bird4.jpg" alt="Bird 4">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
-        <div class="bird">
-            <img src="images/bird5.jpg" alt="Bird 5">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
+
+        <a href="index.html" class="btn">🔙 Tilbage til forsiden</a>
     </div>
 
-    <a href="index.html" class="btn">🔙 Tilbage til forsiden</a>
-
-    <script src="script.js"></script>
 </body>
 </html>
