--- a/about.html
+++ b/about.html
@@ -1,20 +1,67 @@
-<div class="info-box">
-    <h2>🥕 Hvad spiser en Nymph Parakit?</h2>
-    <ul>
-        <li><b>Frø og pellets:</b> En sund blanding er vigtig for en afbalanceret kost.</li>
-        <li><b>Friske frugter & grøntsager:</b> De elsker æbler, gulerødder, spinat og broccoli.
-            <span class="warning-text">Undgå avocado og chokolade</span>, da de er giftige.</li>
-        <li><b>Kalk & mineraler:</b> Blæksprutteben og kalksten hjælper med stærke knogler og et sundt næb.</li>
-        <li><b>Friskt vand:</b> Skal altid være tilgængeligt.</li>
-    </ul>
-</div>
+<!DOCTYPE html>
+<html lang="da">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Om Nymph Parakitter</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<div class="info-box">
-    <h2>❤️ Personlighed og Adfærd</h2>
-    <ul>
-        <li>😍 <b>Kærlig:</b> De elsker at blive nusset og nyder at være tæt på mennesker.</li>
-        <li>🎵 <b>Musikalsk:</b> De kan lære at fløjte melodier og efterligne lyde.</li>
-        <li>🎭 <b>Aktiv:</b> De elsker at lege med legetøj, spejle og udforske deres omgivelser.</li>
-        <li>🫂 <b>Troskab:</b> De knytter sig tæt til deres ejer og kan blive triste, hvis de er alene for længe.</li>
-    </ul>
-</div>
+    <div class="container">
+        <h1>🌿 Om Nymph Parakitter 🦜</h1>
+        <p class="intro">
+            Nymph parakitter (<em>Nymphicus hollandicus</em>) er små, intelligente papegøjer fra Australien.
+            De er kendt for deres charmerende personlighed, flotte fjerpragt og evne til at knytte tætte bånd til deres ejere. 
+            Disse fugle er fantastiske kæledyr for både nybegyndere og erfarne fugleelskere.
+        </p>
+
+        <!-- Hvad spiser en Nymph Parakit? -->
+        <div class="section">
+            <h2>🥕 Hvad spiser en Nymph Parakit?</h2>
+            <ul>
+                <li><strong>🌿 Frø og pellets:</strong> En sund blanding er vigtig for en afbalanceret kost.</li>
+                <li><strong>🍎 Friske frugter & grøntsager:</strong> De elsker æbler, gulerødder, spinat og broccoli.</li>
+                <li class="warning"><strong>🚨 Undgå avocado og chokolade</strong>, da de er giftige.</li>
+                <li><strong>🦴 Kalk & mineraler:</strong> Blæksprutteben og kalksten hjælper med stærke knogler og et sundt næb.</li>
+                <li><strong>💧 Friskt vand:</strong> Skal altid være tilgængeligt.</li>
+            </ul>
+        </div>
+
+        <!-- Personlighed og Adfærd -->
+        <div class="section">
+            <h2>💖 Personlighed og Adfærd</h2>
+            <ul>
+                <li><strong>😍 Kærlig:</strong> De elsker at blive nusset og nyder at være tæt på mennesker.</li>
+                <li><strong>🎶 Musikalsk:</strong> De kan lære at fløjte melodier og efterligne lyde.</li>
+                <li><strong>🐦 Aktiv:</strong> De elsker at lege med legetøj, spejle og udforske deres omgivelser.</li>
+                <li><strong>👥 Troskab:</strong> De knytter sig tæt til deres ejer og kan blive triste, hvis de er alene for længe.</li>
+            </ul>
+        </div>
+
+        <!-- Levealder og Leveforhold -->
+        <div class="section">
+            <h2>🏡 Levealder og Leveforhold</h2>
+            <ul>
+                <li><strong>📏 Stort bur:</strong> Min. 60x45x60 cm, men jo større, desto bedre.</li>
+                <li><strong>🪵 Forskellige siddepinde:</strong> Giver variation og styrker deres fødder.</li>
+                <li><strong>🏞️ Roligt miljø:</strong> Placer buret væk fra træk og direkte sollys.</li>
+                <li><strong>🕊️ Daglig flyvetid:</strong> De skal have mulighed for at flyve uden for buret hver dag.</li>
+            </ul>
+        </div>
+
+        <!-- Pleje og Sundhed -->
+        <div class="section">
+            <h2>🩺 Pleje og Sundhed</h2>
+            <ul>
+                <li><strong>✂️ Trimning:</strong> Klip negle og eventuelt vinger for sikkerhed.</li>
+                <li><strong>🚿 Badning:</strong> De elsker at bade – enten via sprays eller små vandskåle.</li>
+                <li><strong>👩‍⚕️ Dyrlægebesøg:</strong> Årlige tjek sikrer, at din fugl er sund og rask.</li>
+            </ul>
+        </div>
+
+        <a href="index.html" class="btn">🔙 Tilbage til forsiden</a>
+    </div>
+
+</body>
+</html>
