Fancy layout til galleri

--- a/gallery.html
+++ b/gallery.html
@@ -1,40 +1,22 @@
-<!DOCTYPE html>
-<html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galleri - Nymph Parakitter</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>🦜 Mine Nymph Parakitter</h1>
-    <p>Her er mine cutties fugle!</p>
-
-    <div class="gallery">
-        <div class="bird">
-            <img src="images/download.jpg" alt="Bird 1">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
-        <div class="bird">
-            <img src="images/download(1).jpg" alt="Bird 2">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
-        <div class="bird">
-            <img src="images/download(2).jpg" alt="Bird 3">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
-        <div class="bird">
-            <img src="images/download(3).jpg" alt="Bird 4">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
-        <div class="bird">
-            <img src="images/download(4).jpg" alt="Bird 5">
-            <input type="text" placeholder="Skriv fuglens navn" class="bird-name">
-        </div>
+<div class="gallery">
+    <div class="bird">
+        <img src="images/bird1.jpg" alt="Ozziy">
+        <p class="bird-name">🐦 Toty - 4 år gammel</p>
     </div>
-
-    <a href="index.html" class="btn">🔙 Tilbage til forsiden</a>
-
-    <script src="script.js"></script>
-</body>
-</html>
+    <div class="bird">
+        <img src="images/bird2.jpg" alt="Luna">
+        <p class="bird-name">🌙 Mozziy - 2 år gammel</p>
+    </div>
+    <div class="bird">
+        <img src="images/bird3.jpg" alt="Charlie">
+        <p class="bird-name">🎵 Charlie og Chai - 7 år gammel</p>
+    </div>
+    <div class="bird">
+        <img src="images/bird4.jpg" alt="Kiki">
+        <p class="bird-name">💖 Koki - 6 år gammel</p>
+    </div>
+    <div class="bird">
+        <img src="images/bird5.jpg" alt="Milo">
+        <p class="bird-name">🌿 Oziiy - 2 år gammel</p>
+    </div>
+</div>
