--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 
+    <!-- Forside -->
     <div class="container">
         <h1>🌿 Velkommen til Min Nymph Parakeet Samling 🦜</h1>
         <p>En flot side dedikeret til mine smukke nymph parakitter!</p>
 
         <nav>
-            <a href="gallery.html">📸 Galleri</a>
-            <a href="about.html">ℹ️ Om Fuglene</a>
+            <a href="gallery.html" class="nav-link">📸 Galleri</a>
+            <a href="about.html" class="nav-link">ℹ️ Om Fuglene</a>
         </nav>
 
         <button onclick="showAlert()">Klik her for en hemmelig besked</button>
