Fancy layout til galleri

--- a/gallery.html
+++ b/gallery.html
@@ -19,4 +19,16 @@
         <img src="images/bird5.jpg" alt="Milo">
         <p class="bird-name">🌿 Oziiy - 2 år gammel</p>
     </div>
+    <div class="bird">
+        <img src="images/bird6.jpg" alt="Charlie">
+        <p class="bird-name">🎵 Dressed up zizo- 2 år gammel</p>
+    </div>
+    <div class="bird">
+        <img src="images/bird7.jpg" alt="Charlie">
+        <p class="bird-name">🎵 Sol Zizo - 2 år gammel</p>
+    </div>
+    <div class="bird">
+        <img src="images/bird7.jpg" alt="Charlie">
+        <p class="bird-name">🎵 Netto tur Zizo - 2 år gammel</p>
+    </div>
 </div>
