--- a/about.html
+++ b/about.html
@@ -16,47 +16,24 @@
             Disse fugle er fantastiske kæledyr for både nybegyndere og erfarne fugleelskere.
         </p>
 
-        <!-- Hvad spiser en Nymph Parakit? -->
         <div class="section">
             <h2>🥕 Hvad spiser en Nymph Parakit?</h2>
             <ul>
-                <li><strong>🌿 Frø og pellets:</strong> En sund blanding er vigtig for en afbalanceret kost.</li>
-                <li><strong>🍎 Friske frugter & grøntsager:</strong> De elsker æbler, gulerødder, spinat og broccoli.</li>
-                <li class="warning"><strong>🚨 Undgå avocado og chokolade</strong>, da de er giftige.</li>
-                <li><strong>🦴 Kalk & mineraler:</strong> Blæksprutteben og kalksten hjælper med stærke knogler og et sundt næb.</li>
-                <li><strong>💧 Friskt vand:</strong> Skal altid være tilgængeligt.</li>
+                <li>🌿 <strong>Frø og pellets:</strong> En sund blanding er vigtig for en afbalanceret kost.</li>
+                <li>🍎 <strong>Friske frugter & grøntsager:</strong> De elsker æbler, gulerødder, spinat og broccoli.</li>
+                <li class="warning">🚨 <strong>Undgå avocado og chokolade</strong>, da de er giftige.</li>
+                <li>🦴 <strong>Kalk & mineraler:</strong> Blæksprutteben og kalksten hjælper med stærke knogler.</li>
+                <li>💧 <strong>Friskt vand:</strong> Skal altid være tilgængeligt.</li>
             </ul>
         </div>
 
-        <!-- Personlighed og Adfærd -->
         <div class="section">
             <h2>💖 Personlighed og Adfærd</h2>
             <ul>
-                <li><strong>😍 Kærlig:</strong> De elsker at blive nusset og nyder at være tæt på mennesker.</li>
-                <li><strong>🎶 Musikalsk:</strong> De kan lære at fløjte melodier og efterligne lyde.</li>
-                <li><strong>🐦 Aktiv:</strong> De elsker at lege med legetøj, spejle og udforske deres omgivelser.</li>
-                <li><strong>👥 Troskab:</strong> De knytter sig tæt til deres ejer og kan blive triste, hvis de er alene for længe.</li>
-            </ul>
-        </div>
-
-        <!-- Levealder og Leveforhold -->
-        <div class="section">
-            <h2>🏡 Levealder og Leveforhold</h2>
-            <ul>
-                <li><strong>📏 Stort bur:</strong> Min. 60x45x60 cm, men jo større, desto bedre.</li>
-                <li><strong>🪵 Forskellige siddepinde:</strong> Giver variation og styrker deres fødder.</li>
-                <li><strong>🏞️ Roligt miljø:</strong> Placer buret væk fra træk og direkte sollys.</li>
-                <li><strong>🕊️ Daglig flyvetid:</strong> De skal have mulighed for at flyve uden for buret hver dag.</li>
-            </ul>
-        </div>
-
-        <!-- Pleje og Sundhed -->
-        <div class="section">
-            <h2>🩺 Pleje og Sundhed</h2>
-            <ul>
-                <li><strong>✂️ Trimning:</strong> Klip negle og eventuelt vinger for sikkerhed.</li>
-                <li><strong>🚿 Badning:</strong> De elsker at bade – enten via sprays eller små vandskåle.</li>
-                <li><strong>👩‍⚕️ Dyrlægebesøg:</strong> Årlige tjek sikrer, at din fugl er sund og rask.</li>
+                <li>😍 <strong>Kærlig:</strong> Elsker at blive nusset og være tæt på mennesker.</li>
+                <li>🎶 <strong>Musikalsk:</strong> Kan lære at fløjte melodier og efterligne lyde.</li>
+                <li>🐦 <strong>Aktiv:</strong> Elsker at lege med legetøj, spejle og udforske deres omgivelser.</li>
+                <li>👥 <strong>Troskab:</strong> Knytter sig tæt til ejeren og kan blive triste, hvis de er alene for længe.</li>
             </ul>
         </div>
 
