--- a/gallery.html
+++ b/gallery.html
@@ -21,14 +21,14 @@
     </div>
     <div class="bird">
         <img src="images/bird6.jpg" alt="Charlie">
-        <p class="bird-name">🎵 Dressed up zizo- 2 år gammel</p>
+        <p class="bird-name">🎵 Dressed up Zizo - 2 år gammel</p>
     </div>
     <div class="bird">
         <img src="images/bird7.jpg" alt="Charlie">
         <p class="bird-name">🎵 Sol Zizo - 2 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/bird7.jpg" alt="Charlie">
+        <img src="images/bird8.jpg" alt="Charlie">
         <p class="bird-name">🎵 Netto tur Zizo - 2 år gammel</p>
     </div>
 </div>
