Opdateret billede layout og fancy baggrund

--- a/gallery.html
+++ b/gallery.html
@@ -1,34 +1,34 @@
 <div class="gallery">
     <div class="bird">
-        <img src="images/bird1.jpg" alt="Ozziy">
+        <img src="images/resized_bird1.jpg" alt="Ozziy">
         <p class="bird-name">🐦 Toty - 4 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/bird2.jpg" alt="Luna">
+        <img src="images/resized_bird2.jpg" alt="Luna">
         <p class="bird-name">🌙 Mozziy - 2 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/bird3.jpg" alt="Charlie">
+        <img src="images/resized_bird3.jpg" alt="Charlie">
         <p class="bird-name">🎵 Charlie og Chai - 7 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/bird4.jpg" alt="Kiki">
+        <img src="images/resized_bird4.jpg" alt="Kiki">
         <p class="bird-name">💖 Koki - 6 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/bird5.jpg" alt="Milo">
+        <img src="images/resized_bird5.jpg" alt="Milo">
         <p class="bird-name">🌿 Oziiy - 2 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/bird6.jpg" alt="Charlie">
+        <img src="images/resized_bird6.jpg" alt="Charlie">
         <p class="bird-name">🎵 Dressed up zizo- 2 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/bird7.jpg" alt="Charlie">
+        <img src="images/resized_bird7.jpg" alt="Charlie">
         <p class="bird-name">🎵 Sol Zizo - 2 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/bird8.jpg" alt="Charlie">
+        <img src="images/resized_bird8.jpg" alt="Charlie">
         <p class="bird-name">🎵 Netto tur Zizo - 2 år gammel</p>
     </div>
 </div>
