Opdateret billede layout og fancy baggrund

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
     </div>
     <div class="bird">
         <img src="images/resized_bird6.jpg" alt="Charlie">
-        <p class="bird-name">🎵 Dressed up zizo- 2 år gammel</p>
+        <p class="bird-name">🎵 Dressed up Zizo - 2 år gammel</p>
     </div>
     <div class="bird">
         <img src="images/resized_bird7.jpg" alt="Charlie">
