Fix billeder - ensartet størrelse og ingen hvid baggrund

--- a/gallery.html
+++ b/gallery.html
@@ -1,34 +1,37 @@
 <div class="gallery">
     <div class="bird">
-        <img src="images/resized_bird1.jpg" alt="Ozziy">
+        <img src="images/resized_bird1.jpg" alt="Toty">
         <p class="bird-name">🐦 Toty - 4 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/resized_bird2.jpg" alt="Luna">
+        <img src="images/resized_bird2.jpg" alt="Mozziy">
         <p class="bird-name">🌙 Mozziy - 2 år gammel</p>
     </div>
     <div class="bird">
         <img src="images/resized_bird3.jpg" alt="Charlie">
-        <p class="bird-name">🎵 Charlie og Chai - 7 år gammel</p>
+        <p class="bird-name">🎵 Charlie & Chai - 7 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/resized_bird4.jpg" alt="Kiki">
+        <img src="images/resized_bird4.jpg" alt="Koki">
         <p class="bird-name">💖 Koki - 6 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/resized_bird5.jpg" alt="Milo">
-        <p class="bird-name">🌿 Oziiy - 2 år gammel</p>
+        <img src="images/resized_bird5.jpg" alt="Ozziy">
+        <p class="bird-name">🌿 Ozziy - 2 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/resized_bird6.jpg" alt="Charlie">
-        <p class="bird-name">🎵 Dressed up Zizo - 2 år gammel</p>
+        <img src="images/resized_bird6.jpg" alt="Dressed up Zizo">
+        <p class="bird-name">🎀 Dressed up Zizo - 2 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/resized_bird7.jpg" alt="Charlie">
-        <p class="bird-name">🎵 Sol Zizo - 2 år gammel</p>
+        <img src="images/resized_bird7.jpg" alt="Sol Zizo">
+        <p class="bird-name">🌞 Sol Zizo - 2 år gammel</p>
     </div>
     <div class="bird">
-        <img src="images/resized_bird8.jpg" alt="Charlie">
-        <p class="bird-name">🎵 Netto tur Zizo - 2 år gammel</p>
+        <img src="images/resized_bird8.jpg" alt="Netto tur Zizo">
+        <p class="bird-name">🛒 Netto tur Zizo - 2 år gammel</p>
     </div>
 </div>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="gallery.css">
+
